--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+before_install:
+  - sudo add-apt-repository -y ppa:saiarcot895/chromium-beta
+  - sudo apt-get update
+
+install: sudo apt-get install ninja-build
+
 notifications:
   irc:
     channels:
