--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+language: cpp
+
+compiler:
+  - clang
+
 before_install:
   - sudo add-apt-repository -y ppa:saiarcot895/chromium-beta
   - sudo apt-get update
@@ -13,4 +18,6 @@ notifications:
     on_success: change
     on_failure: change
 
-script: ./build.sh
+script:
+  - $CXX --version
+  - ./build.sh
