--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,23 @@ compiler:
   - gcc
 
 before_install:
+  # Ninja
   - sudo add-apt-repository -y ppa:saiarcot895/chromium-beta
   - sudo apt-get update
 
-install: sudo apt-get install ninja-build
+  # g++4.8.1
+  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+
+  # clang 3.4
+  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
+
+
+install:
+  - sudo apt-get install ninja-build
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
 
 notifications:
   irc:
