--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gyp"]
 	path = gyp
 	url = https://chromium.googlesource.com/external/gyp
+[submodule "cleopatra"]
+	path = cleopatra
+	url = https://github.com/bgirard/cleopatra
